--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Composer dependencies install
         run: docker exec ds-app-php /bin/sh -c 'cd app && composer install'
       - name: Executing tests
-        run: docker exec ds-app-php sh app/execute-tests.sh
+        run: docker exec ds-app-php /bin/sh execute-tests.sh
