--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,9 @@ jobs:
           docker image ls -a
           docker run -d --name ds-app-php -it ds-app-php-image 
           docker container ls -a
+      - name: Change directory to app
+        run: docker exec ds-app-php /bin/sh -c 'cd app'
       - name: Composer dependencies install
-        run: docker exec ds-app-php /bin/sh -c 'cd app && composer install'
+        run: docker exec ds-app-php /bin/sh -c 'composer install'
       - name: Executing tests
-        run: docker exec ds-app-php /bin/sh execute-tests.sh
+        run: docker exec ds-app-php sh execute-tests.sh
