--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -18,6 +18,8 @@ RUN apk add autoconf g++ make && \
     docker-php-ext-enable xdebug && \
     apk del --purge autoconf g++ make
 
+RUN docker-php-ext-install mbstring
+
 # Copy the php config file
 COPY ./docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
 COPY ./docker/php/php.ini /usr/local/etc/php/php.ini
