--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
     container_name: ds-app-php
     build:
       context: .
+      target: development
+      args:
+        DOCKER_BUILDKIT: 1
       dockerfile: docker/php/Dockerfile
     environment:
       PHP_IDE_CONFIG: serverName=localhost
